# django-req-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
django_req_generator/: apps.py
django_req_generator/management/commands/: generate_reqs.py  track_reqs.py
django_req_generator/scanner/: ast_analysis.py  django_inspector.py  dynamic_tracker.py
django_req_generator/utils/: filter.py  i18n.py  mapper.py  validator.py
